force-app/main/default/objects/aecm__Capability_Area__c/aecm__Capability_Area__c.object-meta.xml
<CustomObject>
    <description>Container for L2 capability. This is a parent to L3 Capabilities and holds strategies, for maturing.</description>
    <label>Capability Area</label>
    <nameField>
        <label>Capability Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capability Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>