force-app/main/default/objects/aecm__Capability_Area__c/fields/aecm__Active__c.field-meta.xml
<CustomField>
    <fullName>aecm__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to mark record as active for use. If not checked, record will not appear in reports and other metrics.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>