force-app/main/default/objects/aecm__Capability_Area__c/fields/aecm__Capability_Count__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Count__c</fullName>
    <inlineHelpText>Count of capabilities under this record.</inlineHelpText>
    <label>Capability Count</label>
    <summaryFilterItems>
        <field>aecm__Capability__c.aecm__Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>aecm__Capability__c.aecm__Capability_Area__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>