force-app/main/default/objects/aecm__Capability_Area__c/fields/aecm__Capability_Domain__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Domain__c</fullName>
    <description>Parent relationship for this capability area.</description>
    <inlineHelpText>Link to parent capability domain.</inlineHelpText>
    <label>Capability Domain</label>
    <referenceTo>aecm__Capability_Domain__c</referenceTo>
    <relationshipLabel>Capability Areas</relationshipLabel>
    <relationshipName>Capability_Areas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>