force-app/main/default/objects/aecm__Capability_Area__c/fields/aecm__Capability_Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Domain_Name__c</fullName>
    <description>Capability Domain Name from the related Domain.</description>
    <formula>aecm__Capability_Domain__r.Name</formula>
    <label>Capability Domain Name</label>
    <type>Text</type>
</CustomField>