force-app/main/default/objects/aecm__Capability_Area__c/fields/aecm__Capability_Maturity_Status__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Maturity_Status__c</fullName>
    <description>Used to indicate overall capability maturity progression.</description>
    <inlineHelpText>Provides an indication of the overall capability maturity progression.</inlineHelpText>
    <label>Maturity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>aecm__Maturity_Progression_Status</valueSetName>
    </valueSet>
</CustomField>