force-app/main/default/objects/aecm__Capability_Area__c/fields/aecm__Data_Set__c.field-meta.xml
<CustomField>
    <fullName>aecm__Data_Set__c</fullName>
    <description>this field is used to ensure the system data set aligns to the Industry</description>
    <label>Data Set</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BFSI-Banking</fullName>
            </value>
            <value>
                <fullName>BFSI-Finance</fullName>
            </value>
            <value>
                <fullName>BFSI-Insurance</fullName>
            </value>
            <value>
                <fullName>Contact Center</fullName>
            </value>
            <value>
                <fullName>Default (Lead to Cash)</fullName>
            </value>
            <value>
                <fullName>FSL</fullName>
            </value>
            <value>
                <fullName>Higher Ed</fullName>
            </value>
            <value>
                <fullName>HLS-Healthcare</fullName>
            </value>
            <value>
                <fullName>HLS-Pharma</fullName>
            </value>
            <value>
                <fullName>RTW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>