force-app/main/default/objects/aecm__Capability_Area__c/fields/aecm__Definition__c.field-meta.xml
<CustomField>
    <fullName>aecm__Definition__c</fullName>
    <inlineHelpText>Use to provide a comprehensive definition for this capability area.</inlineHelpText>
    <label>DEPRECATED Definition</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>