force-app/main/default/objects/aecm__Capability_Area__c/fields/aecm__Definition_Text__c.field-meta.xml
<CustomField>
    <fullName>aecm__Definition_Text__c</fullName>
    <inlineHelpText>Use to provide a comprehensive definition for this capability area.</inlineHelpText>
    <label>Definition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>