force-app/main/default/objects/aecm__Capability_Area__c/fields/aecm__Effort_Cost__c.field-meta.xml
<CustomField>
    <fullName>aecm__Effort_Cost__c</fullName>
    <label>Effort Cost</label>
    <summarizedField>aecm__Capability__c.aecm__Capability_Effort_Cost__c</summarizedField>
    <summaryForeignKey>aecm__Capability__c.aecm__Capability_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>