force-app/main/default/objects/aecm__Capability_Area__c/fields/aecm__Improvement_Plan__c.field-meta.xml
<CustomField>
    <fullName>aecm__Improvement_Plan__c</fullName>
    <label>Improvement Plan</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>