force-app/main/default/objects/aecm__Capability_Area__c/fields/aecm__Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>aecm__Overall_Score__c</fullName>
    <formula>( aecm__Overall_Score_Rollup__c / aecm__Capability_Count__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>formula field that calculates the score by dividing the Overall Score Rollup field by the # of active related capabilities</inlineHelpText>
    <label>Overall Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>