force-app/main/default/objects/aecm__Capability_Area__c/fields/aecm__Proactivity_Index_Score_Rollup__c.field-meta.xml
<CustomField>
    <fullName>aecm__Proactivity_Index_Score_Rollup__c</fullName>
    <label>Proactivity Index Score Rollup</label>
    <summarizedField>aecm__Capability__c.aecm__Proactivity_Index_Score__c</summarizedField>
    <summaryFilterItems>
        <field>aecm__Capability__c.aecm__Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>aecm__Capability__c.aecm__Capability_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>