force-app/main/default/objects/aecm__Capability_Area__c/fields/aecm__Related_Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>aecm__Related_Functional_Area__c</fullName>
    <formula>aecm__Capability_Domain__r.aecm__Function__r.Name</formula>
    <inlineHelpText>display related functional area this domain is linked to</inlineHelpText>
    <label>Functional Unit Name</label>
    <type>Text</type>
</CustomField>