force-app/main/default/objects/aecm__Capability_Area__c/fields/aecm__Short_Description__c.field-meta.xml
<CustomField>
    <fullName>aecm__Short_Description__c</fullName>
    <inlineHelpText>Provide a description for this capability area that explains its purpose and underlying structures.</inlineHelpText>
    <label>Short Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>