force-app/main/default/objects/aecm__Capability_Area__c/fields/aecm__Sum_of_Process_cost__c.field-meta.xml
<CustomField>
    <fullName>aecm__Sum_of_Process_cost__c</fullName>
    <description>Process cost at capability area record level in the hierarchy will show the sum of “Process cost” on linked Capabilities</description>
    <inlineHelpText>Process cost at capability area record level in the hierarchy will show the sum of “Process cost” on linked Capabilities</inlineHelpText>
    <label>Sum of Process cost</label>
    <summarizedField>aecm__Capability__c.aecm__Capability_Effort_Cost_Actual__c</summarizedField>
    <summaryForeignKey>aecm__Capability__c.aecm__Capability_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>