force-app/main/default/objects/aecm__Capability_Area__c/listViews/aecm__Activate_Capability_Areas.listView-meta.xml
<ListView>
    <fullName>aecm__Activate_Capability_Areas</fullName>
    <columns>NAME</columns>
    <columns>aecm__Active__c</columns>
    <columns>aecm__Capability_Maturity_Status__c</columns>
    <columns>aecm__Overall_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aecm__Related_Functional_Area__c</field>
        <operation>equals</operation>
        <value>Pilot Sales Operations</value>
    </filters>
    <label>Activate Capability Areas</label>
</ListView>