force-app/main/default/objects/aecm__Capability_Area__c/listViews/aecm__All.listView-meta.xml
<ListView>
    <fullName>aecm__All</fullName>
    <columns>NAME</columns>
    <columns>aecm__Capability_Domain__c</columns>
    <columns>aecm__Capability_Count__c</columns>
    <columns>aecm__Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>